# Heat-Model

./: .dockerignore  .visualization_test.py  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  fix_dashboard.sh  requirements.txt  setup.py  setup_project.sh
examples/: config.py  interactive_demo.py  material_test.py  simple_test.py  simulation.py
scripts/: build.sh
src/cpp/include/: CupGenerator.hpp  HeatSolver.hpp  Material.hpp  Point.hpp  PointCloud.hpp
src/cpp/pybind/: bindings.cpp
src/cpp/src/: CupGenerator.cpp  HeatSolver.cpp  Material.cpp  Point.cpp  PointCloud.cpp
src/python/: dashboard.py  simulation_runner.py  test_bindings.py  visualization.py
tests/: test_heat_solver.cpp  test_visualization.py
tests/cpp/: CMakeLists.txt  test_basic.cpp
